# mzSpecLib

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.rst  README.md
implementations/python/: .gitignore  README.md  makefile  pyproject.toml  setup.py
implementations/python/CVs/: Download.txt
implementations/python/bench/: nist_msp_ftp_test.py
implementations/python/doc/: DesignNotes.txt  DevelopingClasses.txt
implementations/python/etc/: classes.yaml
implementations/python/examples/: HumanPlasma_2012-08_all.selected_head.sptxt  chinese_hamster_hcd_selected_head.msp  chinese_hamster_hcd_selected_head.mzlb.txt  draw_entry.py  first_n_entries.py  massivekb_human_speclib_3cac03860ff7453a821332ab4cff20f4_head.sptxt
implementations/python/mzlib/: __init__.py  analyte.py  annotation.py  attributes.py  cluster.py  defaults.py  draw.py  key.py  ontology.py  ontology_term.py  peak_list.py  spectrum.py  spectrum_library.py  spectrum_library_collection.py  spectrum_library_index.py  universal_spectrum_identifier.py  utils.py
implementations/python/mzlib/backends/: __init__.py  base.py  bibliospec.py  diann.py  encyclopedia.py  json.py  msp.py  spectronaut.py  sptxt.py  text.py  utils.py
implementations/python/mzlib/index/: __init__.py  base.py  memory.py  sql.py
implementations/python/mzlib/obo/: psi-ms.obo
implementations/python/spectralLibraries/: Download.txt
implementations/python/tests/: common.py  test_annotation.py  test_cluster.py  test_index.py  test_library.py  test_library_backend.py  test_msp_attributes.py  test_spectrum.py  test_validate.py
(+143 files in other folders)
