[project]
name='mzlib'
version='0.1.0-alpha'
description='HUPO-PSI Spectral library format'
classifiers=[
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "sqlalchemy",
    "click",
    "psims >= 0.1.41",
    "pyteomics >= 4.5.3",
]

[project.optional-dependencies]
test = [
    "jsonschema"
]
doc = [
    "sphinx",
    "sphinx-autobuild",
    "numpydoc>=1,<2",
    "sphinx_click",
    "sphinx_rtd_theme",
    "myst-parser",
]

[project.scripts]
mzspeclib = "mzlib.tools.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.ruff]
target-version = "py38"
line-length = 120
select = ["D"]
ignore = ["D415", "D400", "D212", "D205", "D203", "D105"]

[tool.ruff.pydocstyle]
convention = "numpy"
